// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotspotOpenInIdeButton should handle several IDE 1`] = `
<Toggler
  onRequestClose={[Function]}
  open={false}
  overlay={
    <DropdownOverlay>
      <HotspotOpenInIdeOverlay
        ides={[]}
        onIdeSelected={[Function]}
      />
    </DropdownOverlay>
  }
>
  <Button
    onClick={[Function]}
  >
    hotspots.open_in_ide.open
    <DeferredSpinner
      className="spacer-left"
      loading={false}
    />
  </Button>
</Toggler>
`;

exports[`HotspotOpenInIdeButton should handle several IDE: dropdown open 1`] = `
<Toggler
  onRequestClose={[Function]}
  open={true}
  overlay={
    <DropdownOverlay>
      <HotspotOpenInIdeOverlay
        ides={
          [
            {
              "description": "Hello World",
              "ideName": "BlueJ IDE",
              "port": 42000,
            },
            {
              "description": "Blink",
              "ideName": "Arduino IDE",
              "port": 42001,
            },
          ]
        }
        onIdeSelected={[Function]}
      />
    </DropdownOverlay>
  }
>
  <Button
    onClick={[Function]}
  >
    hotspots.open_in_ide.open
    <DeferredSpinner
      className="spacer-left"
      loading={false}
    />
  </Button>
</Toggler>
`;

exports[`HotspotOpenInIdeButton should render correctly 1`] = `
<Toggler
  onRequestClose={[Function]}
  open={false}
  overlay={
    <DropdownOverlay>
      <HotspotOpenInIdeOverlay
        ides={[]}
        onIdeSelected={[Function]}
      />
    </DropdownOverlay>
  }
>
  <Button
    onClick={[Function]}
  >
    hotspots.open_in_ide.open
    <DeferredSpinner
      className="spacer-left"
      loading={false}
    />
  </Button>
</Toggler>
`;
